add words to spelling exclusions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
     "colorbar",
     "coolwarm",
     "multichoice",
+    "xlabel",
     "xticks",
+    "ylabel",
     "yticks"
   ],
   "cSpell.ignoreWords": ["imshow"]
